[package]
name = "afl_runner"
authors = ["0x434b <admin@0x434b.dev"]
repository = "https://github.com/0xricksanchez/AFL_Runner"
description = "Scaling best-practice AFLPlusPlus fuzzing campaigns made easy"
version = "0.5.1"
edition = "2021"
keywords = ["afl", "fuzzing", "fuzz-testing", "testing", "fuzzer"]
license = "Apache-2.0"

[features]
default = []
completion = ["clap_complete"]

[[bin]]
name = "aflr"
path = "src/main.rs"

[[bin]]
name = "generate_completions"
path = "src/bin/generate_completions.rs"
required-features = ["completion"]

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["wrap_help", "string", "derive"] }
rand = "0.8.5"
sysinfo = "0.33.0"
upon = "0.8.1"
toml = "0.8.19"
serde = { version = "1.0.216", features = ["derive"] }
ratatui = { version = "0.29.0", features = ["crossterm", "all-widgets"] }
crossterm = "0.28.1"
chrono = "0.4.39"
uuid = { version = "1.11.0", features = ["v4"] }
tempfile = "3"
once_cell = "1.20.2"
rayon = "1.10.0"
glob = "0.3.1"
clap_complete = { version = "4.5.38", optional = true }

[dev-dependencies]
cargo-make = "0.37.23"

[workspace]
members = ["examples"]

[workspace.metadata.make]
default = "demo"
working-directory = "examples"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true
