[package]
name = "afl_runner"
authors = ["0x434b <mail@0x434b.dev"]
repository = "https://github.com/0xricksanchez/AFL_Runner"
description = "Scaling best-practice AFLPlusPlus fuzzing campaigns made easy"
version = "0.6.1"
edition = "2024"
keywords = ["afl", "fuzzing", "fuzz-testing", "testing", "fuzzer"]
license = "Apache-2.0"

[features]
default = []
completion = ["clap_complete"]

[[bin]]
name = "aflr"
path = "src/main.rs"

[[bin]]
name = "generate_completions"
path = "src/bin/generate_completions.rs"
required-features = ["completion"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["wrap_help", "string", "derive"] }
rand = "0.9.1"
sysinfo = "0.35.1"
upon = "0.9.0"
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
ratatui = { version = "0.29.0", features = ["crossterm", "all-widgets"] }
crossterm = "0.29.0"
chrono = "0.4.41"
uuid = { version = "1.16.0", features = ["v4"] }
tempfile = "3.20.0"
once_cell = "1.21.3"
rayon = "1.10.0"
glob = "0.3.2"
clap_complete = { version = "4.5.50", optional = true }

[dev-dependencies]
cargo-make = "0.37.24"

[workspace]
members = ["examples"]

[workspace.metadata.make]
default = "demo"
working-directory = "examples"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true
